[gd_scene load_steps=5 format=3 uid="uid://c6gx821kdkcrj"]

[ext_resource type="Script" path="res://Rock.gd" id="1_vra07"]
[ext_resource type="Texture2D" uid="uid://xcpdkbrmjfdy" path="res://resources/kamienÃÅ.png" id="2_d6x7l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mj4b6"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mdw1q"]
radius = 9.0

[node name="Rock" type="Node2D"]

[node name="Rock" type="RigidBody2D" parent="." groups=["Rock"]]
gravity_scale = 0.3
lock_rotation = true
script = ExtResource("1_vra07")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
shape = SubResource("CircleShape2D_mj4b6")

[node name="Sprite2D" type="Sprite2D" parent="Rock"]
position = Vector2(1, 0)
scale = Vector2(0.78125, 0.78125)
texture = ExtResource("2_d6x7l")

[node name="Area2D" type="Area2D" parent="Rock"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock/Area2D"]
shape = SubResource("CircleShape2D_mdw1q")

[node name="Timer" type="Timer" parent="Rock"]
wait_time = 0.02
one_shot = true

[connection signal="body_entered" from="Rock/Area2D" to="Rock" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Rock/Area2D" to="Rock" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Rock/Timer" to="Rock" method="_on_timer_timeout"]
